force-app/main/default/objects/Annual_Student_Information__c.object
<CustomObject>
    <fields>
        <fullName>PAH_SSGradeLevel_1__c</fullName>
        <description>Prior Academic History Social Studies Grade Level</description>
        <label>PAH SS Grade Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>Kindergarten</fullName>
                </value>
                <value>
                    <fullName>Pre-Kindergarten</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAH_SS_Grade_Level__c</fullName>
        <description>Prior Academic History Social Studies Grade Level</description>
        <label>PAH SS Grade Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>Kindergarten</fullName>
                </value>
                <value>
                    <fullName>Pre-Kindergarten</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAH_SciGradeLevel_1__c</fullName>
        <description>Prior Academic History Science Grade Level</description>
        <label>PAH Sci Grade Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>Kindergarten</fullName>
                </value>
                <value>
                    <fullName>Pre-Kindergarten</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Photo_Video_Release__c</fullName>
        <description>Authorization for use of student work, images, video, interviews, quotes, etc.</description>
        <label>Photo Video Release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No, I have read and do not agree with the statement above regarding iNaCA Media Property.</fullName>
                </value>
                <value>
                    <fullName>Yes, I have read and agree to the statement above regarding iNaCA Media Property.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlacementReactivationStatus__c</fullName>
        <description>Placement Reactivation Status</description>
        <label>Placement Reactivation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Placement_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Placement Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Placement_Reactivation_Status__c</fullName>
        <description>Placement Reactivation Status</description>
        <label>Placement Reactivation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Child_Find_Case_Number__c</fullName>
        <description>Referral #</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Child_Find_Detailed_Log__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Potential Child Find Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Child_Find__c</fullName>
        <description>Potential Child Find</description>
        <label>Potential Child Find</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_GT_Program__c</fullName>
        <label>Previous GT Program</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Language Arts</fullName>
                </value>
                <value>
                    <fullName>Math</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <description>The Program Enrollment record for the student.</description>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Annual Student Information</relationshipLabel>
        <relationshipName>Annual_Student_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason_Requesting_Retention__c</fullName>
        <label>Reason Requesting Retention</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>As the parent or guardian, I do not believe my student is ready to move forward.</fullName>
                </value>
                <value>
                    <fullName>I selected this in error.</fullName>
                </value>
                <value>
                    <fullName>My student’s previous school recommended retention.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecommendedAutoPlacement__c</fullName>
        <label>Recommended Auto Placement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIF_Summer_School_Courses__c</fullName>
        <description>Will/did the student attend summer school in the given year?</description>
        <label>SIF Summer School Courses</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STS_CT_Prediction__c</fullName>
        <label>STS CT Prediction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>My student did not take the state assessment in 2016-2017</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>My student did not take the state assessment in 2017-2018</fullName>
                </value>
                <value>
                    <fullName>My student did not take the state assessment in 2018-2019</fullName>
                </value>
                <value>
                    <fullName>My student did not take the state assessment last school year</fullName>
                </value>
                <value>
                    <fullName>My student did not take the state assessment in 2019-2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The School Year record for the year the data is relevant to.</description>
        <label>School Year</label>
        <referenceTo>School_Year__c</referenceTo>
        <relationshipLabel>Annual Student Information</relationshipLabel>
        <relationshipName>Annual_Student_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Science_Placement_Level__c</fullName>
        <label>Science Placement Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>Gifted Science 3</fullName>
                </value>
                <value>
                    <fullName>Gifted Science 4</fullName>
                </value>
                <value>
                    <fullName>Gifted Science 5</fullName>
                </value>
                <value>
                    <fullName>Gifted Science 6</fullName>
                </value>
                <value>
                    <fullName>Gifted Science 7</fullName>
                </value>
                <value>
                    <fullName>Gifted Science 8</fullName>
                </value>
                <value>
                    <fullName>Compass Science</fullName>
                </value>
                <value>
                    <fullName>Extended Science</fullName>
                </value>
                <value>
                    <fullName>Connected Science</fullName>
                </value>
                <value>
                    <fullName>Transitional K</fullName>
                </value>
                <value>
                    <fullName>Alternative Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StudentIsELL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this an ELL student?</description>
        <label>Student Is ELL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StudentPlacementBucket__c</fullName>
        <description>Student Placement Bucket</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Student Placement Bucket</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Act_Status__c</fullName>
        <formula>ISPICKVAL( Program_Enrollment__r.Status__c, &apos;In Progress&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Act Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_Complete_CBE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Student Complete CBE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransitionalKAcknowledgement__c</fullName>
        <description>Added as part of the Story 118665.  It will be updated by an Enrollment Component when the caretaker answers if the student is interested in transitional K.</description>
        <label>TransitionalK Acknowledgement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>V2_External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>V2 External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Annual Student Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>StudentPlacementBucket__c</field>
            <operation>contains</operation>
            <value>Placed - Auto Placed K8</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Annual Student Information</pluralLabel>
    <recordTypes>
        <fullName>Electives_Exclude_from_Auto_Course_Sel_c</fullName>
        <active>true</active>
        <label>Electives_Exclude_from_Auto_Course_Sel__c</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student</fullName>
        <active>true</active>
        <label>Student</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_SchoolYearBlank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( School_Year__c )</errorConditionFormula>
        <errorMessage>School year is required for Annual Student Information.</errorMessage>
    </validationRules>
</CustomObject>