force-app/main/default/objects/Annual_Student_Information__c/validationRules/ASI_SchoolYearBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ASI_SchoolYearBlank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( School_Year__c )</errorConditionFormula>
    <errorMessage>School year is required for Annual Student Information.</errorMessage>
</ValidationRule>