force-app/main/default/objects/Annual_Student_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StudentPlacementBucket__c</field>
        <operation>contains</operation>
        <value>Placed - Auto Placed K8</value>
    </filters>
    <label>All</label>
</ListView>